[gd_scene load_steps=3 format=3 uid="uid://town_scene"]

[ext_resource type="Theme" uid="uid://b7w5k8j6x2q1a" path="res://resources/ui_theme.tres" id="1"]
[ext_resource type="Script" path="res://scripts/ui/TownScene.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://banlt66gdvndq" path="res://scenes/components/ui_button.tscn" id="3"]

[node name="TownScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Welcome to Town"
horizontal_alignment = 1
theme_type_variation = "H1"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="ShopButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3")]
layout_mode = 2
text = "Shop"

[node name="QuestGiverButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3")]
layout_mode = 2
text = "Talk to Quest Giver"

[node name="LeaveTownButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3")]
layout_mode = 2
text = "Leave Town"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ShopButton" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/QuestGiverButton" to="." method="_on_quest_giver_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LeaveTownButton" to="." method="_on_leave_town_pressed"]
